--- a/src/App.css
+++ b/src/App.css
@@ -306,6 +306,31 @@ input:focus {
   }
 }
 
+.pagination {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+}
+
+.page-item {
+  margin-bottom: 1rem;
+  height: 2rem;
+  width: 2rem;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  border: 1px solid rgba(128, 128, 128, 0.374);
+  border-radius: 0.1rem;
+  color: black;
+}
+
+ul,
+li,
+a {
+  text-decoration: none;
+  list-style-type: none;
+}
+
 /* Large devices (laptops/desktops, 1130px and up) */
 @media only screen and (max-width: 1130px) {
   .poke-container {
